<resources>
    <string name="app_name">CoffeeShopOnline</string>
    <string name="get_started">Get Started</string>
    <string name="find_the_best_coffee_nfor_you">Find The Best Coffee\nFor You</string>
    <string name="started">Started</string>
    <string name="search_anything">Search anything..</string>
    <string name="name">Name</string>
    <string name="good_morning">Good Morning</string>
    <string name="grab_your_first_coffee_in_this_morning">Grab your first coffee in this morning</string>
    <string name="popular">Popular</string>
    <string name="see_all">See all</string>
    <string name="available">Available</string>
    <string name="available_offer">Available Offer\n</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="enter_your_copoun">Enter Your Copoun</string>
    <string name="apply">Apply</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="procced_to_checkout">Procced To Checkout</string>
</resources>