<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/light_gradient">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="48dp">

                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/back2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_cart"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/backBtn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/backBtn" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cartView"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/view_holder_cart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/white_bg"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/copounEdt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/enter_your_copoun"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/applyCopounEdt"
                        style="@android:style/Widget.Button"
                        android:layout_width="100dp"
                        android:layout_height="38dp"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/orange_bg"
                        android:text="@string/apply"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtotal"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/totalFeeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="$-" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/delivery"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/textView10"
                        app:layout_constraintTop_toBottomOf="@id/textView10" />

                    <TextView
                        android:id="@+id/deliveryTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/textView12"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textView12"
                        tools:text="$-" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/total_tax"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/textView12"
                        app:layout_constraintTop_toBottomOf="@id/textView12" />

                    <TextView
                        android:id="@+id/taxTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/textView14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textView14"
                        tools:text="$-" />

                    <View
                        android:id="@+id/viewSupported"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/darkGrey"
                        app:layout_constraintTop_toBottomOf="@id/taxTxt" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/textView14"
                        app:layout_constraintTop_toBottomOf="@id/viewSupported" />

                    <TextView
                        android:id="@+id/totalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/textView17"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView17"
                        tools:text="$-" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/checkOutBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/orange_bg"
                    android:text="@string/procced_to_checkout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>