<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/light_gradient"
        tools:ignore="UselessLeaf">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/picMain"
                        android:layout_width="0dp"
                        android:layout_height="390dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/CircleImageView2"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="48dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/favBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/favorite_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/backBtn" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/white_bg"
                        android:elevation="3dp"
                        app:layout_constraintBottom_toBottomOf="@id/picMain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/picMain">

                        <TextView
                            android:id="@+id/minusCart"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:text="@string/minus"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/plusCart"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:text="@string/plus"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/numberItemTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="3dp"
                            android:text="@string/one"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/plusCart"
                            app:layout_constraintStart_toEndOf="@id/minusCart"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="Title" />

                    <TextView
                        android:id="@+id/priceTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="$0" />

                </LinearLayout>

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:rating="4" />

                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/darkGrey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/coffee_size"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sizeList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    tools:itemCount="4"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/view_holder_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addToCartBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/orange_bg"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>